2005-07-12
<pablo@eurodev.net>
	o Use conntrack netlink attributes: Major change
	o Kill action setting: Mask based dumping
	o Fix ChangeLog

2005-05-23
<laforge@netfilter.org>
	o Fixed syntax error (tab/space issue) in help message
	o Fixed getopt handling on big endian machines
	o Fixed possible future read-over-end-of-array in TCP extension
	o Add manpage
	o Add missing space at output of libct_proto_icmp.c
	o Add status bits that were introduced in 2.6.11
	o Add SCTP extension
	o Add support for expect creation
	o Bump version number to 0.63

2005-05-17
<pablo@eurodev.net>
	o Added descriptive error messages.
	o Fix wrong flags check in [tcp|udp] proto helpers.

2005-05-16
<pablo@eurodev.net>
	o Implemented ICMP proto helper
	o Added help() and final_check() functions for proto helpers.

2005-05-01
<pablo@eurodev.net>
	o Created changelog file
	o Deleted libctnetlink.h and libnfnetlink.h from the include/ dir.
	o Added support for version (-V) and help (-h)
	o Added event mask based support
	o Added GPLv2 headers
	o Use fprintf instead of printf
	o Defined print_tuple and print_proto output interfaces
	o ctnl_[get|del]_conntrack handles return value from kernel via msgerr
	o Added support for conntrack table flushing
	o Added test case file (test.sh)
	o Improve dump output

<azez@ufomechanic.net>
	o Autoconf stuff for conntrack + some pablo's modifications.
	o Fixed packet counters formatting (use %llu instead of %lu)

2005-04-25
<pablo@eurodev.net>
	o Added support for mask based event dumping
	o Added support for mask based event notification
	o On-demand autoload of ip_conntrack_netlink